Fixed z-index

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -10,7 +10,7 @@
   position: fixed;
   width: 100%;
   background-color: white;
-  z-index: 90;
+  z-index: 1000;
   * {
     box-sizing: border-box;
   }
